# health-connect-webhook-local-sync

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE.md  README.md  ROADMAP.md  idea.md  pyproject.toml  verify_auth.py
app/: __init__.py  auth.py  config.py  convex_client.py  main.py  models.py  normalizer.py  schemas.py
app/routes/: __init__.py  analytics.py  browser_auth.py  dashboard.py  debug.py  health.py  ingest.py
app/static/: dashboard.css  dashboard.js
app/templates/: dashboard.html  login.html
convex/: .env.example  convex.json  package-lock.json  package.json  schema.ts  vitest.config.ts
convex-local/: .env.example  .gitignore
convex/healthIngester/: cleanup.test.ts  cleanup.ts  crons.ts  lib.ts  mutations.test.ts  mutations.ts  queries.test.ts  queries.ts
docs/: openclaw-external-api-test.md
docs/architecture/: 001-convex-as-database.md  002-strict-normalizer.md  003-bearer-token-auth.md  (+4 more)
fixtures/: healthconnect_android_mixed.json  healthconnect_heartrate.json  healthconnect_invalid_missing_fields.json  healthconnect_mixed.json  healthconnect_steps.json  healthconnect_weight.json
scripts/: dev.sh  test.sh
tests/: __init__.py  conftest.py  test_analytics_routes.py  test_android_normalizer.py  test_android_payload_schema.py  test_auth.py  test_browser_auth.py  test_config.py  test_convex_client.py  test_dashboard.py  test_health.py  test_ingest.py  test_ingest_idempotency.py  test_ingest_route_android.py  test_main.py  test_models.py  test_normalize.py  test_schemas.py  test_validation.py
tools/: mock_sender.py
(+9 files in other folders)
