[project]
name = "health-ingest"
version = "0.1.0"
description = "Health Connect webhook ingest server"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "jinja2>=3.1.0",
    "itsdangerous>=2.2.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "convex>=0.7.0",
    "requests>=2.31.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]